# TriviaGame

./: CMakeLists.txt  readme.md
db/: dbmanager.h
src/: game.cpp  game.h  mainmenu.cpp  mainmenu.h  mainwindow.cpp  mainwindow.h  mcquestion.h  optionsmenu.cpp  optionsmenu.h
src/game/: game.cpp  game.h  gameoptionsmenu.cpp  gameoptionsmenu.h  gamesettings.cpp  gamesettings.h
src/menus/: addquestionmenu.cpp  addquestionmenu.h  editquestionmenu.cpp  editquestionmenu.h  mainmenu.cpp  mainmenu.h  managequestionsmenu.cpp  managequestionsmenu.h  optionsmenu.cpp  optionsmenu.h  questionbank.cpp  questionbank.h
src/questions/: mcquestion.cpp  mcquestion.h  question.h  saquestion.cpp  saquestion.h  tfquestion.cpp  tfquestion.h
